added kanban and article layout

--- a/LeerMeester/package.json
+++ b/LeerMeester/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2": "^24.2.7",
+    "@syncfusion/ej2-react-calendars": "^24.2.5",
+    "@syncfusion/ej2-react-kanban": "^24.2.3",
+    "@syncfusion/ej2-react-schedule": "^24.2.4",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
